overflow-x on mobile fixed

--- a/home/style.css
+++ b/home/style.css
@@ -4,6 +4,10 @@
     --open-sider-duration: 0.8s;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     padding: 0;
     margin: 0;
